# 8bitult

./: Cargo.toml  README.md
cli/: Cargo.toml  README.md
cli/doc/: keycodes.md
cli/src/: cli.rs  commands.rs  main.rs  profile.rs  ui.rs
cli/src/commands/: backup.rs  mod.rs
profiles/: default.toml
src/: lib.rs
src/bindings/: commands.rs  mod.rs  read.rs  reset.rs  types.rs  utils.rs  write.rs
src/bluetooth/: characteristic.rs  connect.rs  mod.rs  power.rs
src/config/: mod.rs
src/keyboard/: mod.rs
