[package]
name = "heigtbitult"
version = "0.1.0"
edition = "2024"
authors = ["Thoxy"]

[workspace]
members = ["cli"]
default-members = ["cli"]

[dependencies]
btleplug = "0.11"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"