[package]
name = "heigtbitult-cli"
version = "0.1.0"
edition = "2021"
default-run = "8bitult-cli"

[[bin]]
name = "8bitult-cli"
path = "src/main.rs"
default = true

[dependencies]
heigtbitult = { path = ".." }
clap = { version = "4.5.28", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.217"
toml = "0.8"
anyhow = "1.0"
btleplug = "0.11.7"
colored = "3.0.0"
tabled = "0.18.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
dirs = "6.0.0"